klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/association/DoubleOwnedAssociationErrorTest.klass
package dummy

association DoubleOwnedAssociation
{
    source: DoubleOwnedClass[1..1] owned;
    target: DoubleOwnedClass[1..1] owned;

    relationship this.id == DoubleOwnedClass.id
}

class DoubleOwnedClass
{
    id: Long key;
}
